static/css/main.css
@charset "UTF-8";

@font-face { font-display: fallback;
	     font-family: "et-book";
             src: url("/font/et-book-roman-line-figures.woff2") format("woff2"),
                  url("/font/et-book-roman-line-figures.woff") format("woff");
             font-weight: normal;
             font-style: normal; }

@font-face { font-display: fallback;
             font-family: "et-book";
             src: url("/font/et-book-display-italic-old-style-figures.woff2") format("woff2"),
                  url("/font/et-book-display-italic-old-style-figures.woff") format("woff");
             font-weight: normal;
             font-style: italic; }

@font-face { font-display: fallback;
             font-family: "et-book";
             src: url("/font/et-book-bold-line-figures.woff2") format("woff2"),
                  url("/font/et-book-bold-line-figures.woff") format("woff");
             font-weight: bold;
             font-style: normal; }

@font-face { font-display: fallback;
             font-family: "et-book-roman-old-style";
             src: url("/font/et-book-roman-old-style-figures.woff2") format("woff2"),
                  url("/font/et-book-roman-old-style-figures.woff") format("woff");
             font-weight: normal;
             font-style: normal; }

/* Tufte CSS styles */
html { font-size: 15px; }

body { width: 87.5%;
       margin-bottom: -1px;
       margin-left: auto;
       margin-right: auto;
       padding-left: 12.5%;
       font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
       background-color: #fffff8;
       color: #111;
       max-width: 1400px;
       counter-reset: sidenote-counter; }

header { padding-top: 2rem; }

.section-navigation { font-size: 0;
                      width: 55%; }

.section-navigation .element { border: 1px solid #ccc;
                               display: inline-block;
                               font-size: 1.4rem;
                               padding: 1rem 2%;
                               width: 29%; }

.section-navigation small { display: block;
                            font-size: 1rem;
                            font-style: normal;
                            letter-spacing: .05em;
                            line-height: 2;
                            text-transform: uppercase; }

.section-navigation a:link { background: none; }


.section-navigation .home { text-align: center; }

.section-navigation .prev { border-right: 0;
                            text-align: right; }

.section-navigation .next { border-left: 0; }

nav { font-style: italic;
      padding-right: 12.5%; }

nav > span { font-size: 1.4rem;
             line-height: 2rem; }

nav > ul { list-style-type: none;
           float: right;
           margin: 0;
	         padding: 0; }

nav li { display: inline;
         padding-left: 1rem; }

h1 { font-weight: 400;
     margin-top: 4rem;
     margin-bottom: 1.5rem;
     font-size: 3.2rem;
     line-height: 1; }

h2 { font-style: italic;
     font-weight: 400;
     margin-top: 2.1rem;
     margin-bottom: 1.4rem;
     font-size: 2.2rem;
     line-height: 1; }

h3 { font-style: italic;
     font-weight: 400;
     font-size: 1.7rem;
     margin-top: 2rem;
     margin-bottom: 1.4rem;
     line-height: 1; }

hr { display: block;
     height: 1px;
     width: 55%;
     border: 0;
     border-top: 1px solid #ccc;
     margin: 1em 0;
     padding: 0; }

abbr { text-decoration: none; }

p.subtitle { font-style: italic;
             margin-top: 1rem;
             margin-bottom: 1rem;
             font-size: 1.8rem;
             display: block;
             line-height: 1; }

.prefix { margin-left:-1.4rem;
          margin-right: .3rem; }

.numeral { font-family: et-book-roman-old-style; }

.danger { color: red; }

main { position: relative;
       padding: 5rem 0rem; }

main li small { line-height: 1; }

section { padding-top: 1rem;
          padding-bottom: 1rem; }

p, ol, ul { font-size: 1.4rem;
            line-height: 2rem; }

ul { list-style-type: none; }

ul > li { position: relative; }

main ul > li:before { content: "\2219";
                 left: -.9rem;
	         position: absolute; }

p { margin-top: 1.4rem;
    margin-bottom: 1.4rem;
    padding-right: 0;
    vertical-align: baseline; }


/* Chapter Epigraphs */
div.epigraph { margin: 5em 0; }

div.epigraph > blockquote { margin-top: 3em;
                            margin-bottom: 3em; }

div.epigraph > blockquote, div.epigraph > blockquote > p { font-style: italic; }

div.epigraph > blockquote > footer { font-style: normal; }

div.epigraph > blockquote > footer > cite { font-style: italic; }

main > h1 + blockquote { margin-top: 3em;
                         margin-bottom: 3em;
                         font-style: italic; }

/* end chapter epigraphs styles */

blockquote { font-size: 1.4rem; }

blockquote p { width: 55%;
               margin-right: 40px; }

blockquote footer { width: 55%;
                    font-size: 1.1rem;
                    text-align: right; }

section > p, section > footer, section > table { width: 55%; }

/* 50 + 5 == 55, to be the same width as paragraph */
section > dl, section > ol, section > ul, .footnotes { width: 50%;
                                                       -webkit-padding-start: 5%; }

li:not(:first-child) { margin-top: 0.25rem; }

figure { padding: 0;
         border: 0;
         font-size: 100%;
         font: inherit;
         vertical-align: baseline;
         max-width: 55%;
         -webkit-margin-start: 0;
         -webkit-margin-end: 0;
         margin: 0 0 3em 0; }

figcaption { float: right;
             clear: right;
             margin-top: 0;
             margin-bottom: 0;
             font-size: 1.1rem;
             line-height: 1.6;
             vertical-align: baseline;
             position: relative;
             max-width: 40%; }

figure.fullwidth figcaption { margin-right: 24%; }
/* ... */

